[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1_1"
path = "src/day1/part1/main.rs"

[[bin]]
name = "day1_2"
path = "src/day1/part2/main.rs"

[[bin]]
name = "day2_1"
path = "src/day2/part1/main.rs"

[[bin]]
name = "day2_2"
path = "src/day2/part2/main.rs"

[[bin]]
name = "day3_1"
path = "src/day3/part1/main.rs"

[[bin]]
name = "day3_2"
path = "src/day3/part2/main.rs"

[[bin]]
name = "day4_1"
path = "src/day4/part1/main.rs"

[[bin]]
name = "day4_2"
path = "src/day4/part2/main.rs"

[[bin]]
name = "day5_1"
path = "src/day5/part1/main.rs"

[[bin]]
name = "day5_2"
path = "src/day5/part2/main.rs"

[[bin]]
name = "day6_1"
path = "src/day6/part1/main.rs"

[[bin]]
name = "day6_2"
path = "src/day6/part2/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
